--- a/ITS_demo/templates/division copy.html
+++ b/ITS_demo/templates/division copy.html
@@ -44,5 +44,5 @@ function checkRem(i){
 {% endblock %}
 
 {% block hint %}
-<img src="../static/images/Long Division Calculator with Remainders.png" alt="" style="margin-left: 30%;">
+<img src="{{ url_for('static', filename = 'images/Long Division Calculator with Remainders.png') }}" alt="" style="margin-left: 30%;">
 {% endblock %}
