--- a/ITS_demo/templates/algebra_easy.html
+++ b/ITS_demo/templates/algebra_easy.html
@@ -24,6 +24,75 @@ console.log(document.getElementsByTagName("input")[i].value);
     }
 }
 
+        var arrayFromStroage = JSON.parse(localStorage.getItem("textValues"));
+        var arrayLength = arrayFromStroage.length;
+        var total_score = 0;
+        if(localStorage.getItem('textValues') == null || arrayLength >= 4){
+          if(arrayLength == 4){
+            const reducer = (accumulator, curr) => accumulator + curr;
+            total_score = arrayFromStroage.reduce(reducer);
+            // var algebra =[];
+            
+          }
+          var algebra =[];
+        }
+        else{
+          algebra =  JSON.parse(localStorage.getItem('textValues'));
+        }
+
+        console.log(algebra);
+
+        var hint_count = 0;
+        var quesid = "{{ easy.qid }}";
+
+        function addItemToArray(){
+          let score = 25 - (5*hint_count);
+          algebra.push(score);
+          localStorage.setItem('textValues', JSON.stringify(algebra));
+        }
+
+        $(document).ready(function(){
+          $('.toast').toast('hide');
+          console.log(arrayLength);
+          if(arrayLength < 4){
+            for(i = 0;i < arrayLength;i++){
+              document.getElementsByClassName("bi")[i].classList.add("done");
+            }  
+          }
+        
+          $('#hint-btn').click(function(){
+            hint_count++;
+          })
+           
+          $('#next-btn').click(function(){
+            $('.toast').toast('show');
+            addItemToArray();
+            if(arrayLength == 4){
+              var data = {qid: quesid, score: total_score};
+              $.post('/score', {'data': data}, function(response){
+                window.location = "{{url_for('home')}}";
+              });
+              // $.ajax({
+              //     type: 'POST',
+              //     url: '/score',
+              //     contentType: 'application/json; charset=utf-8',
+              //     data: JSON.stringify({'data': data}),
+              //     dataType: 'json',
+              //     success: function(response){
+              //       return location.replace("{{url_for('home')}}");
+              //     }
+              // });
+
+
+              // event.preventDefault();
+            }
+            else{
+              setTimeout(function(){ location.reload() }, 1000);      
+            }
+                  
+          });
+        });
+
 
 {% endblock %}
 {% block chapter %}Algebra{% endblock %} 
@@ -44,6 +113,5 @@ console.log(document.getElementsByTagName("input")[i].value);
 
 {% block hint %}
 <img src="{{ url_for('static', filename = 'images/algebra_terms.jpeg') }}" alt="" style = "width:80%;">
-
-
 {% endblock %}
+
