--- a/ITS_demo/templates/home_new.html
+++ b/ITS_demo/templates/home_new.html
@@ -233,18 +233,18 @@
 
           <div class="main">
             <div class="container-fluid white">
-                <h1 style="text-align:center;">Fractions</h1>
+                <h1 style="text-align:center; margin: 25px 0 10px 0;">Fractions</h1>
                 <div class="row">
                     <div class="col-lg-5 col-md-12 col-11" id="leftsection">
-                      <img src="../static/images/fractionbg.jpg">
+                      <img src="../static/images/fractionbg.jpg" style="padding: 5px;">
                     </div>
                     <div class="col-lg-7 col-md-12 col-11" id="rightsection">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+                        <h3 style = "text-align: justify;">Fractions are defined as the parts of a whole. The whole can 
+                            be a number or any specific value or a thing. In other words,
+                            it is also termed as a portion or section of any quantity. 
+                            It is denoted by using ‘/’ symbol, such as a/b. For example, 
+                            in 2/4 is a fraction where the upper part denotes the numerator
+                            and lower part is the denominator.</h3>
                         <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
                         <a href="{{ url_for('fraction_easy') }}"><button type="button" class="btn signup blue" style="color:white!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
                         <a href="{{ url_for('fraction_intermediate') }}"><button type="button" class="btn signup blue" style="color:white!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
@@ -255,18 +255,16 @@
           </div>
           <div class="alg">
             <div class="container-fluid blue">
-                <h1 style="text-align:center;color:white;">Algebra</h1>
+                <h1 style="text-align:center;color:white; margin: 25px 0 10px 0;">Algebra</h1>
                 <div class="row">
                     <div class="col-lg-5 col-md-12 col-11" id="leftsection">
-                      <img src="../static/images/fractionbg.jpg">
+                      <img src="../static/images/fractionbg.jpg" style="padding: 5px;">
                     </div>
                     <div class="col-lg-7 col-md-12 col-11" id="rightsection">
-                        <h3 style="color:white;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+                        <h3 style="color:white; text-align: justify;">With Algebra you play with letters, numbers and symbols, and you also get to 
+                          find secret things! And once you learn some of the "tricks", 
+                          it becomes a fun challenge to work out how to use your skills 
+                          in solving each "puzzle".</h3>
                         <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
                          <a href="{{ url_for('algebra_easy') }}"><button type="button" class="btn signup white" style="color:black!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
                         <a href="{{ url_for('algebra_intermediate') }}"><button type="button" class="btn signup white" style="color:black!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
