--- a/ITS_demo/templates/algebra2.html
+++ b/ITS_demo/templates/algebra2.html
@@ -42,6 +42,11 @@ console.log({{ easy.answer[i] }});
         }
     }
 {% endblock %}
+
+{% block chapter %}Algebra{% endblock %}
+{% block topic %}{{ easy.topic }}{% endblock %}
+
+
 {% block content %}
 <div>{{ easy.question }}</div>
 <p>
