--- a/ITS_demo/templates/home_new.html
+++ b/ITS_demo/templates/home_new.html
@@ -258,7 +258,7 @@
                 <h1 style="text-align:center;color:white; margin: 25px 0 10px 0;">Algebra</h1>
                 <div class="row">
                     <div class="col-lg-5 col-md-12 col-11" id="leftsection">
-                      <img src="../static/images/fractionbg.jpg" style="padding: 5px;">
+                      <img src="../static/images/algebra_home.png" style="padding: 5px;">
                     </div>
                     <div class="col-lg-7 col-md-12 col-11" id="rightsection">
                         <h3 style="color:white; text-align: justify;">With Algebra you play with letters, numbers and symbols, and you also get to 
