--- a/ITS_demo/templates/home.html
+++ b/ITS_demo/templates/home.html
@@ -262,7 +262,7 @@
                 <h1 style="text-align:center;">Algebra</h1>
                 <div class="row">
                     <div class="col-lg-5 col-md-12 col-11" id="leftsection">
-                      <img src="../static/images/fractionbg.jpg">
+                      <img src="../static/images/algebra_home.png">
                     </div>
                     <div class="col-lg-7 col-md-12 col-11" id="rightsection">
                         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
