qts with new layout

--- a/ITS_demo/templates/layout_new.html
+++ b/ITS_demo/templates/layout_new.html
@@ -152,8 +152,7 @@
 }
 
 #progressbar li:last-child:after {
-    top: 147px;
-    height: 132px
+    top: 147px
 }
 
 #progressbar li:nth-child(3):after {
