--- a/ITS_demo/templates/index_new.html
+++ b/ITS_demo/templates/index_new.html
@@ -121,9 +121,18 @@
         border-bottom-style: groove;
         background-color: inherit;
         font-family: 'Poppins', sans-serif;
-        color:#fff;
-        font-size: 2.5vw;
-        width: 30vw;
+        color:#0070BB;
+        background-color: white;
+        margin-bottom: 1rem;
+        padding: 5px;
+        /* font-size: 2.5vw;
+        width: 30vw; */
+        }
+        
+        textarea{
+          padding: 5px;
+          margin-bottom: 2rem;
+          color:#0070BB;
         }
         .contact{
             display: flex;
@@ -143,6 +152,9 @@
 
         .text-white {
           color: white;
+        }
+        ::placeholder{
+          color: blue;
         }
     </style>
 </head>
@@ -256,75 +268,67 @@
 
             </div>
           </section> -->
-          <section class="sec blue">
-              <div class="container-fluid">
-                  <h1 class="contact-title">Contact Us</h1>
-                  <p class="contact-title">Want to get in touch? We would love to hear from you. Fill the form below to drop us an email.</p>
-                  <div class="row">
-                      <div class="col-lg-7 col-md-12 col-11" id="leftsection">
-                          <div>
-                    
-                              <div class="card mb-3" style="max-width: 540px;background-color: transparent !important;border:none;">
-                              <div class="row no-gutters">
-                                <div class="col-md-4">
-                                   <img src="../static/images/Address-bro.png" alt="" class="contact-icons">
-                                </div>
-                                <div class="col-md-8">
-                                  <div class="card-body">
-                                    <h5 class="card-title text-white">Address</h5>
-                                    <p class="text-white">Mumbai, Maharashtra</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div>
-                              <!-- <img src="../static/images/Mobile login-bro.png" alt="" class="contact-icons"> -->
-                              <div class="card mb-3" style="max-width: 540px;background-color: transparent !important;border:none;">
-                              <div class="row no-gutters">
-                                <div class="col-md-4">
-                                   <img src="../static/images/Mobile login-bro.png" alt="" class="contact-icons">
-                                </div>
-                                <div class="col-md-8">
-                                  <div class="card-body">
-                                    <h5 class="card-title text-white">Phone</h5>
-                                    <!-- <p class="card-text">+91 79772 69807 <br>+91 86930 19131 <br>+91 89766 67012</p> -->
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-
-                          </div>
-                          <div>
-                      
-                            <div class="card mb-3" style="max-width: 540px;background-color: transparent !important;border:none;">
-                              <div class="row no-gutters">
-                                <div class="col-md-4">
-                                   <img src="../static/images/Email campaign-bro.png" alt="" class="contact-icons">
-                                </div>
-                                <div class="col-md-8">
-                                  <div class="card-body">
-                                    <h5 class="card-title text-white">Email</h5>
-                                    <p class="card-text text-white">SHRUTI.SOLANI@svkmmumbai.onmicrosoft.com <br>BHAVYA.THAKKAR1@svkmmumbai.onmicrosoft.com <br>RAJ.SHAH8@svkmmumbai.onmicrosoft.com</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-5 col-md-12 col-11" id="rightsection">
-                        <div class="contact-form-box white">
-                        <h3>Send Message</h3><br>
-                        <input type="text" name="" id="" placeholder="First Name"><br><br>
-                        <input type="text" placeholder="Last Name"><br><br>
-                        <input type="email" name="" id="" placeholder="Email"><br><br>
-                        <input type="text" name="" id="input-message" placeholder="Message..."><br><br>
-                    <button type="button" class="contact-btn blue" style="font-size: 1.5rem;">Send</button>
-                      </div>
-                  </div>
+          <section class="sec blue" style="padding: 3rem;">
+            
+            <div class="container" style="border-radius: 30px;background-color:blanchedalmond;">
+              
+              <div style="padding-top: 30px;">
+                <h1 style="text-align: center;color: #0070BB;">Get in touch!</h1>
+                <p style="font-weight: bolder ;color: #0070BB;text-align: center;">Contact us for a quote, help at to join the team</p>
               </div>
-              <a href="https://storyset.com/education" style="text-decoration: none; color: white;">All illustrations by Storyset</a>
-            </section>
+              
+              <div class="row" style="padding:3% 5%;">
+                <div class="col-lg-4 cpl-md-4 col-sm-12">
+                  <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;margin-bottom: 1rem;">
+                    <i class="fas fa-map-marker-alt fa-3x" style="color:#0070BB;margin-bottom: 5px;"></i>
+                    <h6 style="color: gray;font-weight: bolder ;">102 Street 2714 Don</h6>
+                    <h6 style="color: gray;font-weight: bolder ;">102 Street 2714 Don</h6>
+                    <h6 style="color: gray;font-weight: bolder ;">102 Street 2714 Don</h6>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 cpl-md-4 col-sm-12">
+                  <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;margin-bottom: 1rem;">
+                    <i class="fas fa-phone-alt fa-3x" style="color:#0070BB;margin-bottom: 5px;"></i>
+                    <h6 style="color: gray;font-weight: bolder ;">+02 1234 567</h6>
+                    <h6 style="color: gray;font-weight: bolder ;">+02 1234 568</h6>
+                    <h6 style="color: gray;font-weight: bolder ;">+02 1234 569</h6>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 cpl-md-4 col-sm-12">
+                  <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
+                    <i class="fas fa-envelope fa-3x" style="color:#0070BB;margin-bottom: 5px;"></i>
+                    <h6 style="color: gray;font-weight: bolder ;">Contact1@gmail.com</h6>
+                    <h6 style="color: gray;font-weight: bolder ;">Contact2@gmail.com</h6>
+                    <h6 style="color: gray;font-weight: bolder ;">Contact3@gmail.com</h6>
+                  </div>
+                </div>
+              </div>
+
+              <form>
+                <div class="row" style="padding: 1rem 2rem;">
+                  <div class="col-lg-6 col-md-12 col-sm-12">
+                    <!-- <label style="color:#0070BB;font-size: 20px;" for="name">Your Name</label><br> -->
+                    <input style=" width: 100%;color: blue;" placeholder="Your Name" type="text" id="name" ><br>
+
+                    <!-- <label style="color:#0070BB;font-size: 20px;" for="mail">Mail</label><br> -->
+                    <input style="width: 100%;color: blue;" placeholder="Email" type="email" id="mail" ><br>
+
+                    <!-- <label style="color:#0070BB;font-size: 20px;" for="phone">Phone</label><br> -->
+                    <input style="  width: 100%;color: blue;" placeholder="Phone" type="text" id="phone" ><br>
+
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-sm-12">
+                    <!-- <label style="font-size: 20px;color:#0070BB" for="msg">Message</label><br> -->
+                    <textarea style="border: gray; height: 88%;width: 100%;" placeholder="Message" id="msg"></textarea><br>
+                  </div>
+                  <button style="color:white;margin-top: 30px; width: 100%;font-size: 25px;background-color:#0070BB;padding: 12px 7px;">Send Message</button>
+                </div>
+              </form>
+
+            </div>
+          </section>
                 </div>
             </div>
         </div>
